🔨 fix: shifted icons inside menu

--- a/src/assets/scss/blocks/_nav.scss
+++ b/src/assets/scss/blocks/_nav.scss
@@ -65,7 +65,7 @@
 }
 
 @each $icon in vars.$icons {
-	.nav__item[data-item='#{$icon}'] .nav__link {
+	[data-parent='header'] .nav__item[data-item='#{$icon}'] .nav__link {
 		@media screen and (min-width: vars.$breakpoint-desktop) {
 			transform: translate(
 				var(--#{$icon}-position-x, 0),
